--- a/style/style.css
+++ b/style/style.css
@@ -24,10 +24,10 @@ header {
   justify-content: space-between;
   position: relative;
   width: 100%;
-  height: 70px;
   z-index: 1100;
   border-bottom: 1px solid #051d66;
 }
+
 
 .logo {
   font-size: 1.2rem;
@@ -48,23 +48,28 @@ header {
 }
 
 .menu-icon span {
-  width: 20px;
+  width: 30px;
   height: 4px;
   background: #051d66;
   border-radius: 2px;
 }
 
 .img-icon {
-  width: 28%;
+  width: 15%;
   border-radius: 5px;
-  object-fit: cover;
 }
 
+.container-nav{
+    width: 50%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
 nav {
   position: fixed;
   top: 0;
   right: -300px;
-  width: 150px;
+  width: 230px;
   height: 100vh;
   background: #222;
   box-shadow: -2px 0 15px rgba(0, 0, 0, 0.5);
@@ -78,7 +83,30 @@ nav {
 
 #menu-toggle:checked + .menu-icon + nav {
   right: 0;
+
 }
+
+#menu-toggle:checked + .menu-icon span{
+    background-color: white;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1000;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+
+#menu-toggle:checked ~ .overlay {
+  display: block;
+}
+
 
 nav a {
   padding: 1rem;
@@ -127,7 +155,7 @@ main {
 }
 
 .head img {
-  width: 30%;
+  width: 50%;
   object-fit: cover;
 }
 
@@ -149,16 +177,17 @@ main {
 
 .container h2 {
   text-align: center;
-  font-size: 18px;
+  font-size: 30px;
 }
 
 .container button {
   width: 80%;
-  height: 45px;
+  height: 60px;
   background-color: #051d66;
   border-radius: 3px;
   color: white;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 18px;
   border: none;
 }
 
